<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:contentDescription="@string/main_background"
        android:src="@drawable/bg__img" />

    <TextView
        android:id="@+id/mainHeaderTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:text="@string/main_header"
        android:textColor="@color/colorTextIcons"
        android:textSize="40sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="95dp"
        android:text="@string/main_subheader"
        android:textColor="@color/colorPrimaryLight"
        android:textSize="25sp" />
    <Button
        android:id="@+id/findRestaurantsButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/button_title"
        android:background="@color/colorAccent"
        android:textColor="@color/colorTextIcons" />

    <EditText
        android:id="@+id/locationEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/findRestaurantsButton"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:background="@color/colorTextIcons"
        android:ems="6"
        android:padding="5dp"
        android:hint="@string/zip_hint" />

</RelativeLayout>